# challenger_stats

./: .gitignore  daily_update.py  package-lock.json  package.json  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py  routes.py
backend/app/api/: fetch_data.py  transform_data.py  validation.py
backend/app/db/: crud.py  database.db  database.py  db_actions.py  db_connection.py  db_queries.py  models.py
backend/app/models/: account.py  league.py  models.py
backend/app/services/: account_service.py  database.db  league_service.py  services.py
backend/app/transformers/: league_to_accounts.py
frontend/: package-lock.json  package.json
frontend/services/: apiService.js
frontend/src/: App.js  LadderComponent.css  LadderComponent.js  LadderComponentSkeleton.js  Match.js  MatchDetail.js  PlayerMatchHistory.css  PlayerMatchHistory.js  PlayerStats.js  TestRoute.js  TestRoute3.js  apiService.js  index.js
