[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["unsupervised-machine <taran.s.lau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
databases = "^0.9.0"
pydantic = "^2.9.2"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
